Added better channel and role caching, permission caching, fixed pings in forum channels, fixed unmutes not working if member has left the server